@@ -1,3 +1,9 @@
+2012-12-14 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/sugar/functions/clamp.h: clamp was pretty wrong
+        * unitTests/runit.sugar.R: new unit test for clamp
+        * unitTests/cpp/sugar.cpp: new unit test for clamp
+
 2012-12-12  JJ Allaire <jj@rstudio.org>
 
         * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
